--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up JDK 19
+      uses: actions/setup-java@v3
+      with:
+        java-version: '19'
+        distribution: 'corretto'
+    - name: Checkout Java
+      uses: actions/checkout@v3
+      with:
+        repository: 'Rice-COMP-310/s23-chatapp-comp310-s23-chatapp-05'
+        path: 'java'
+        submodules: 'recursive'
+    - name: Generate Javadoc
+      run: javadoc -encoding UTF-8 -docletpath ./docfx-doclet-1.0-SNAPSHOT-jar-with-dependencies.jar -doclet com.microsoft.doclet.DocFxDoclet -sourcepath ./java/src -outputpath ./api -subpackages common
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
