--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Checkout Java
       uses: actions/checkout@v3
       with:
-        repository: 'Rice-COMP-310/s23-chatapp-comp310-s23-chatapp-05'
+        repository: 'https://github.com/Rice-COMP-310/s23-chatapp-comp310-s23-chatapp-05.git'
         path: 'java'
         submodules: 'recursive'
         ref: 'main'
