--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,13 +29,13 @@ jobs:
     - name: Checkout Java
       uses: actions/checkout@v3
       with:
-        repository: 'Rice-COMP-310/s23-chatapp-design-comp310-s23-chatapp-design-a'
-        path: 'java/common'
+        repository: 'Rice-COMP-310/s23-chatapp-comp310-s23-chatapp-05'
+        path: 'java'
         submodules: 'recursive'
         ref: 'main'
         token: ${{ secrets.TOKEN }}
     - name: Generate Javadoc
-      run: javadoc -encoding UTF-8 -docletpath ./docfx-doclet-1.0-SNAPSHOT-jar-with-dependencies.jar -doclet com.microsoft.doclet.DocFxDoclet -sourcepath ./java -outputpath ./api -subpackages common
+      run: javadoc -encoding UTF-8 -docletpath ./docfx-doclet-1.0-SNAPSHOT-jar-with-dependencies.jar -doclet com.microsoft.doclet.DocFxDoclet -sourcepath ./java/src -outputpath ./api -subpackages common
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
